@@ -3,6 +3,7 @@ import * as Assertions from 'ephox/snooker/test/Assertions';
 
 UnitTest.test('UnmergeOperationsTest', function () {
   Assertions.checkUnmerge(
+    'TBA',
     '<table><tbody>' +
       '<tr><th>A1</th><td>B1</td><td>C1</td><td>D1</td></tr>' +
       '<tr><th>?</th><td>B2</td><td>C2</td><td>D2</td></tr>' +
@@ -21,6 +22,7 @@ UnitTest.test('UnmergeOperationsTest', function () {
   );
 
   Assertions.checkUnmerge(
+    'TBA',
     '<table><tbody>' +
       '<tr><th>' +
       '<table><tbody>' +
@@ -49,6 +51,7 @@ UnitTest.test('UnmergeOperationsTest', function () {
   );
 
   Assertions.checkUnmerge(
+    'TBA',
     '<table><tbody>' +
     '<tr><th rowspan="3">A1</th><td>B1</td><td colspan="2">C1</td></tr>' +
     '<tr><td>B2</td><td>C2</td><td>?</td></tr>' +
@@ -67,6 +70,7 @@ UnitTest.test('UnmergeOperationsTest', function () {
   );
 
   Assertions.checkUnmerge(
+    'TBA',
     '<table><thead>' +
       '<tr><td>A1</td><td>?</td><td>?</td><td>D1</td></tr>' +
       '</thead>' +
@@ -89,6 +93,7 @@ UnitTest.test('UnmergeOperationsTest', function () {
   );
 
   Assertions.checkUnmerge(
+    'TBA',
     '<table><thead>' +
       '<tr><td>A1</td><td>B1</td><td>C1</td><td>D1</td></tr>' +
       '</thead>' +
@@ -107,6 +112,113 @@ UnitTest.test('UnmergeOperationsTest', function () {
 
     [
       { section: 1, row: 0, column: 0 }
+    ]
+  );
+
+  Assertions.checkUnmerge(
+    'TINY-6484: rowgroup-scoped cell split into cells results in all generated spells having scope row',
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th scope="row">A1</th>' +
+          '<td>B1</td>' +
+          '<td>C1</td>' +
+          '<td>D1</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<th scope="row">?</th>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<th scope="row">?</th>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th rowspan="3" scope="rowgroup">A1</th>' +
+          '<td>B1</td>' +
+          '<td>C1</td>' +
+          '<td>D1</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+    [
+      {
+        section: 0,
+        row: 0,
+        column: 0
+      }
+    ]
+  );
+
+  Assertions.checkUnmerge(
+    'TINY-6484: colgroup-scoped cell split into cells results in all generated spells having scope col',
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th scope="col">A1</th>' +
+          '<th scope="col">?</th>' +
+          '<th scope="col">?</th>' +
+          '<th scope="col">?</th>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A2</td>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A3</td>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+
+    '<table>' +
+      '<tbody>' +
+        '<tr>' +
+          '<th colspan="4" scope="colgroup">A1</th>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A2</td>' +
+          '<td>B2</td>' +
+          '<td>C2</td>' +
+          '<td>D2</td>' +
+        '</tr>' +
+        '<tr>' +
+          '<td>A3</td>' +
+          '<td>B3</td>' +
+          '<td>C3</td>' +
+          '<td>D3</td>' +
+        '</tr>' +
+      '</tbody>' +
+    '</table>',
+    [
+      {
+        section: 0,
+        row: 0,
+        column: 0
+      }
     ]
   );
 });
